# dog-replay-debugger

./: .gitignore  README.md  main.py  pyproject.toml  recording_20260408_230452.csv  requirements.txt  run_cli.py  run_gui.py  visualize_recording.py
adapters/: mujoco_adapter.py  null_robot_adapter.py  robot_adapter.py
backend/: CMakeLists.txt  README.md  build.sh
backend/daemon/: can_interface.cpp  can_interface.hpp  log.hpp  main.cpp  motor_io.cpp  motor_io.hpp  robstride.cpp  robstride.hpp  twin_agent.cpp  twin_agent.hpp  twin_protocol.hpp
backend/rec/sim_record/: README.md
backend/rec/sim_record/examples/: walk_forward.yaml
backend/wiki/: backend_review.md  index.md  refactor_plan.md
backend/wiki/daemon/: can_interface.md  log.md  main.md  motor_io.md  overview.md  robstride.md  twin_agent.md  twin_protocol.md
backend/wiki/frontend/: command_protocol.md  frontend_api_spec.md  qt_frontend_contract.md  state_stream_spec.md
cli/: printers.py  session.py
docs/: MODERN_UI_GUIDE.md  UI_PREVIEW.txt  architecture.md
docs/superpowers/plans/: 2026-04-15-gui-real-vs-mujoco-comparison.md
docs/superpowers/specs/: 2026-04-15-dog-v2-rl-sar-integration-design.md  2026-04-15-gui-real-vs-mujoco-comparison-design.md
dog_fifo_backend/: CMakeLists.txt  README.md
dog_fifo_backend/daemon/: main.cpp  motor_config.hpp  motor_io.cpp  motor_io.hpp  protocol.hpp  tcp_server.cpp  tcp_server.hpp
dog_fifo_backend/docs/superpowers/specs/: 2026-04-13-dog-driver-library-design.md
dog_fifo_backend/driver/include/: observations.hpp  robstride.hpp
dog_fifo_backend/driver/src/: can_interface.cpp  observations.cpp  robstride.cpp
dog_fifo_backend/utils/: README.md
dog_fifo_backend/utils/include/utils/: async_message_process.h  timer.h
dog_fifo_backend/utils/test/: test_utils  test_utils.cc
driver/include/: dog_driver.hpp
driver/src/: dog_driver.cpp
examples/: sample_replay.csv
gui/: ARCHITECTURE.md  backend_state_panel.py  control_panel.py  curves_panel.py  joint_card.py  joint_dashboard.py  joint_table.py  knee_debug_panel.py  main_window.py  status_panel.py  styles.py  view_model.py
replay_core/: __init__.py  config.py  constants.py  csv_loader.py  joint_limits.py  metrics.py  replay_engine.py  sync_bus.py  types.py
sim_record/examples/: walk_forward.yaml
sim_record/output/: recording.csv
state_machine/: CMakeLists.txt  main.cpp  observations.cpp  observations.hpp  policy_runner.cpp  policy_runner.hpp  protocol.cpp  protocol.hpp  state_machine.cpp  state_machine.hpp  tcp_client.cpp  tcp_server.cpp  tcp_server.hpp  tensorrt_inference.cpp  tensorrt_inference.hpp
state_machine/gui_client/: client.py  control_panel.py  main.py  protocol.py  status_panel.py  styles.py
state_machine/test/: build.sh  sm_test.cpp
tests/: test_csv_loader.py  test_joint_limits.py  test_replay_engine.py
