[project]
name = "dog-replay-debugger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mujoco>=3.0",
    "numpy>=1.24",
    "pyqtgraph>=0.13",
    "pyside6>=6.5",
    "onnxruntime<1.20",
    "pyyaml>=6.0.3",
    "pandas>=2.3.3",
]
